feat(moderation): implement time limits